--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
   font-size: 67.5%;
   font-family: "Noto Sans Japanese", sans-serif;
   letter-spacing: 0.05em;
-  background-image: url(../img/bg.jpeg);
+  /* background-image: url(../img/bg.png); */
 }
 
 header iframe {
@@ -28,11 +28,12 @@ header .wrapper {
 
 .main_visual {
   width: 100%;
-  height: 100vh;
-  background-image: url(../img/poster.jpg);
+  height: calc(100vh - 100px);
+  background-image: url(../img/main-visual.png);
   background-size: cover;
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
+  margin-bottom: auto;
 }
 
 main {
@@ -118,11 +119,11 @@ a:visited {
 @media screen and (min-width: 601px) {
   header {
     width: 100%;
-    height: 500px;
+    /* height: 500px; */
   }
 
   header img {
-    width: 30%;
+    width: 100%;
   }
   .wrapper {
     width: 50%;
@@ -238,7 +239,7 @@ a:visited {
   }
 
   header img {
-    width: 70%;
+    width: 100%;
   }
 
   header .mainbox {
