--- a/css/style.css
+++ b/css/style.css
@@ -28,12 +28,9 @@ header .wrapper {
 
 .main_visual {
   width: 100%;
-  height: calc(100vh - 100px);
-  background-image: url(../img/main-visual.png);
-  background-size: cover;
-  background-position: top;
-  background-repeat: no-repeat;
-  margin-bottom: auto;
+}
+.main_visual img{
+  width: 100%;
 }
 
 main {
@@ -101,7 +98,7 @@ a:visited {
 .mainbox_large {
   width: 100%;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
 }
 
@@ -137,8 +134,8 @@ a:visited {
     width: 50%;
   }
   .mainbox {
-    height: 450px;
-    /* height:auto; */
+    /* height: 450px; */
+    height:auto;
   }
 
   .mainbox_large {
