--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ a:visited {
   #works .wrapper .wrapper_exptitle {
     flex-wrap: wrap;
     display: flex;
-    height: 100%;
+    /* height: 100%; */
   }
 
   #access .wrapper_exptitle {
